// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`long.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]:
    this is a long long long long long long long long long long long long long
    paragraph.

[^world]:
    this is a long long long long long long long long long long long long long
    paragraph. this is a long long long long long long long long long long long
    long long paragraph.

================================================================================
`;

exports[`long.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph. this is a long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`long.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]:
    this is a long long long long long long long long long long long long long paragraph.
    this is a long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`long.md - {"tabWidth":3} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
tabWidth: 3
                                                                                | printWidth
=====================================input======================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]: this is a long long long long long long long long long long long long long paragraph.
          this is a long long long long long long long long long long long long long paragraph.

=====================================output=====================================
[^hello]: this is a long long long long long long long long long long long long long paragraph.
[^world]:
    this is a long long long long long long long long long long long long long paragraph.
    this is a long long long long long long long long long long long long long paragraph.

================================================================================
`;

exports[`multiline.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]:
    Here is a footnote which includes code. Here is a footnote which includes
    code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

================================================================================
`;

exports[`multiline.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]:
    Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

================================================================================
`;

exports[`multiline.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]:
    Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

================================================================================
`;

exports[`multiline.md - {"tabWidth":3} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
tabWidth: 3
                                                                                | printWidth
=====================================input======================================
[^fn1]:

    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]: Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

=====================================output=====================================
[^fn1]:
    > \`\`\`rs
    > fn main() {
    >     println!("this is some Rust!");
    > }
    > \`\`\`

[^fn2]: Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

[^fn2]:
    Here is a footnote which includes code. Here is a footnote which includes code. Here is a footnote which includes code.

    \`\`\`rs
    fn main() {
        println!("this is some Rust!");
    }
    \`\`\`

================================================================================
`;

exports[`sibling.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`sibling.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`sibling.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`sibling.md - {"tabWidth":3} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
tabWidth: 3
                                                                                | printWidth
=====================================input======================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: > 123\\
      > 456
[^a]: a
[^a]: a
[^a]: a

=====================================output=====================================
[^a]: a
[^a]: a
[^a]: a
[^a]: > 123
[^a]: a
[^a]: > 123
[^a]: a
[^a]: a
[^a]: a

---

[^a]: a
[^a]: a
[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]:
    > 123\\
    > 456

[^a]: a
[^a]: a
[^a]: a

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;

exports[`simple.md - {"proseWrap":"never"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;

exports[`simple.md - {"proseWrap":"preserve"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "preserve"
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;

exports[`simple.md - {"tabWidth":3} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
tabWidth: 3
                                                                                | printWidth
=====================================input======================================
[^hello]: world

=====================================output=====================================
[^hello]: world

================================================================================
`;
